[gd_scene load_steps=2 format=3 uid="uid://fovgioak1uvq"]

[ext_resource type="Script" path="res://Scripts/Menus/PauseMenu.gd" id="1_6bren"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_right = 39.0
offset_bottom = 40.0
scale = Vector2(28.8557, 16.2431)
script = ExtResource("1_6bren")

[node name="PauseText" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 5.54484
offset_top = 1.97006
offset_right = 52.5448
offset_bottom = 24.9701
scale = Vector2(0.621892, 0.238376)
text = "Pause"
scroll_active = false
autowrap_mode = 0
tab_size = 5

[node name="PauseMenuLayout" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 9.32226
offset_top = 9.91188
offset_right = 49.3223
offset_bottom = 53.9119
scale = Vector2(0.312188, 0.19884)

[node name="ResumeButton" type="Button" parent="PauseMenuLayout"]
layout_mode = 2
text = "Resume"

[node name="SaveGameButton" type="Button" parent="PauseMenuLayout"]
layout_mode = 2
text = "Save"

[node name="LoadGameButton" type="Button" parent="PauseMenuLayout"]
layout_mode = 2
text = "Load"

[node name="ExitGameButton" type="Button" parent="PauseMenuLayout"]
layout_mode = 2
text = "Exit"

[node name="PauseMenuSave" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.3272
offset_top = 10.3429
offset_right = 71.3272
offset_bottom = 146.343
scale = Vector2(0.312188, 0.19884)

[node name="SaveSlot1" type="Button" parent="PauseMenuSave"]
layout_mode = 2
text = "Slot 1"

[node name="SaveSlot2" type="Button" parent="PauseMenuSave"]
layout_mode = 2
text = "Slot 2"

[node name="SaveSlot3" type="Button" parent="PauseMenuSave"]
layout_mode = 2
text = "Slot 3"

[node name="Return" type="Button" parent="PauseMenuSave"]
layout_mode = 2
text = "Return"

[node name="PauseMenuLoad" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.3272
offset_top = 10.3429
offset_right = 71.3272
offset_bottom = 146.343
scale = Vector2(0.312188, 0.19884)

[node name="LoadSlot1" type="Button" parent="PauseMenuLoad"]
layout_mode = 2
text = "Slot 1"

[node name="LoadSlot2" type="Button" parent="PauseMenuLoad"]
layout_mode = 2
text = "Slot 2"

[node name="LoadSlot3" type="Button" parent="PauseMenuLoad"]
layout_mode = 2
text = "Slot 3"

[node name="ReturnLoad" type="Button" parent="PauseMenuLoad"]
layout_mode = 2
text = "Return"
